--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
