--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
+  },
   "scripts": {
+    "postinstall": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch --mode=development"
   },
