--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
+    "uuidv4": "^4.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
