--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
     "grammar-graph": "^3.1.1",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
@@ -47,6 +46,12 @@
   },
   "homepage": "https://github.com/jdarmoni/DuoJuo#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "json-loader": "^0.5.7"
   }
 }
